--- a/python-manifests/deployment.yaml
+++ b/python-manifests/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: python-helloworld
   name: python-helloworld
-  namespace: default 
+  namespace: demo 
 spec:
   replicas: 3
   selector:
